--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -18,10 +18,10 @@
 
 .nav-li {
   text-decoration: none;
-  font-size: 1.2rem;
+  font-size: 1.5rem;
   font-weight: 700;
-  /* color: black; */
-  color: #4b4453;
+  color: black;
+  /* color: #4b4453; */
 }
 
 /* .active {
