home, contact final

--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -3,8 +3,17 @@
   position: relative;
   height: 100vh;
   z-index: 0;
-  background-image: url('../../assets/crepe.jpg');
-  background-color: #ebd6ee;
+  background-color: #19181a;
+  /* background-color: #182628; */
+  /* background-color: #88bdbc; */
+  /* background-color: #222629; */
+  color: white;
+  /* color: #254e58; */
+  /* color: #112d32; */
+  /* color: #17252a; */
+  /* color: #080f5b; */
+  /* background-image: url('../../assets/crepe.jpg'); */
+  /* background-color: #ebd6ee; */
   display: flex;
   justify-content: center;
   align-items: center;
