--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,7 +1,8 @@
 .navbar {
   width: 5vw;
   height: 100vh;
-  background-color: rgba(0, 0, 0, 0.2);
+  /* background-color: rgba(0, 0, 0, 0.2); */
+  background-color: rgba(255, 255, 255, 0.2);
   position: fixed;
   z-index: 1;
   padding-top: 9rem;
@@ -19,8 +20,10 @@
 .nav-li {
   text-decoration: none;
   font-size: 1.5rem;
-  font-weight: 700;
-  color: black;
+  font-weight: 800;
+  /* color: black; */
+  color: white;
+  mix-blend-mode: overlay;
   /* color: #4b4453; */
 }
 
