--- a/src/pages/Contact/Contact.css
+++ b/src/pages/Contact/Contact.css
@@ -5,8 +5,9 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: #000;
-  color: white;
+  background-color: #19181a;
+  /* color: white; */
+  /* color: black; */
 }
 
 .wrap {
@@ -28,6 +29,7 @@
   white-space: nowrap;
   margin: 0 auto;
   letter-spacing: 0.4vw;
+  color: white;
   /* letter-spacing: 0.15em; */
   animation: typing 3s steps(40, end), blink-caret 0.75s step-end infinite;
 }
@@ -47,7 +49,7 @@
     border-color: transparent;
   }
   50% {
-    border-color: black;
+    border-color: white;
   }
 }
 .wrap {
@@ -57,10 +59,9 @@
 
 .contact-center {
   width: 75vw;
-  height: 75vh;
-  border: 5px solid black;
+  height: 70vh;
   background-image: url('../../assets/keyboard.jpg');
-  filter: blur(8px);
+  filter: blur(6px);
   /* -webkit-filter: blur(8px); */
   position: relative;
   z-index: 0;
@@ -102,6 +103,8 @@ textarea {
 }
 
 label {
+  font-size: 1.3vw;
+  color: white;
   height: 100%;
   position: absolute;
   left: 0;
@@ -113,6 +116,8 @@ label {
 }
 
 button {
+  font-size: 1.5vw;
+  font-weight: 600;
   padding: 10px 0;
   color: white;
   outline: none;
