--- a/src/pages/Projects/Projects.css
+++ b/src/pages/Projects/Projects.css
@@ -1,54 +1,56 @@
-.about {
+.about-container {
   position: relative;
   z-index: 0;
   max-width: 100vw;
   height: 100vh;
+  background-color: #19181a;
+  color: white;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.flip-card {
-  /* position: relative; */
-  width: 23vw;
-  height: 30vh;
-  border: 1px solid black;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  perspective: 1000px;
+.about {
+  width: 25vw;
+  height: 35vh;
+  /* position: absolute; */
+  /* border: 1px solid white; */
 }
 
-.flip-card-inner {
-  position: relative;
-  width: 23vw;
-  height: 30vh;
+.card-front,
+.card-back {
+  position: absolute;
+  color: black;
+  width: 25vw;
+  height: 35vh;
+  padding: 1vw;
+}
+
+.card-front p {
+  font-size: 2vw;
   text-align: center;
-  transition: transform 0.6s;
-  transform-style: preserve-3d;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
+.card-front h3 {
+  text-align: center;
+  font-size: 2vw;
 }
 
-.flip-card:hover .flip-image {
+.card-front {
+  background-color: grey;
   transform: rotateY(180deg);
 }
 
-.flip-image,
-.flip-text {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
+.card-back {
+  background-color: lightgrey;
 }
 
-.flip-image {
-  background-color: #bbb;
-  color: black;
+.about-inner {
+  width: 25vw;
+  height: 35vh;
+  transform-style: preserve-3d;
+  transition: transform 0.5s;
 }
 
-.flip-text {
-  background-color: #2980b9;
-  color: black;
+.about:hover .about-inner {
   transform: rotateY(180deg);
 }
