--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Karla:wght@500&family=Playfair+Display:wght@400;500;600&family=Titillium+Web:ital,wght@0,600;0,700;1,400&display=swap');
+
+/* font-family: 'Karla', sans-serif; */
+/* font-family: 'Playfair Display', serif; */
+/* font-family: 'Titillium Web', sans-serif; */
+
 body {
   margin: 0;
   padding: 0;
   max-width: 100vw;
+  font-family: 'Playfair Display', serif;
 }
 
 .App {
