--- a/src/pages/Projects/Projects.css
+++ b/src/pages/Projects/Projects.css
@@ -2,12 +2,26 @@
   position: relative;
   z-index: 0;
   max-width: 100vw;
-  height: 100vh;
+  margin: 2vw;
   background-color: #19181a;
   color: white;
   display: grid;
   grid-template-columns: 25vw 25vw 25vw;
-  gap: 2vw;
+  gap: 2.5vw;
   justify-content: center;
   align-items: center;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  background-color: #19181a;
+  color: white;
+  align-items: center;
+  min-height: 100vh;
+}
+
+.outer-text {
+  font-size: 3vw;
+  font-weight: 400;
 }
