--- a/src/pages/Projects/Projects.css
+++ b/src/pages/Projects/Projects.css
@@ -3,7 +3,7 @@
   z-index: 0;
   max-width: 100vw;
   margin: 2vw;
-  background-color: #19181a;
+  /* background-color: #19181a; */
   color: white;
   display: grid;
   grid-template-columns: 25vw 25vw 25vw;
@@ -15,7 +15,7 @@
 .container {
   display: flex;
   flex-direction: column;
-  background-color: #19181a;
+  /* background-color: #19181a; */
   color: white;
   align-items: center;
   min-height: 100vh;
