--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -123,7 +123,7 @@
   }
 }
 
-@media (max-width: 600px) {
+@media (max-width: 600px) and (min-width: 400px) {
   .home-name {
     margin-left: 20px;
     font-size: 30px;
@@ -131,5 +131,16 @@
   .home-text {
     margin-left: 20px;
     font-size: 23px;
+  }
+}
+
+@media (max-width: 400px) and (min-width: 250px) {
+  .home-name {
+    margin-left: 20px;
+    font-size: 20px;
+  }
+  .home-text {
+    margin-left: 20px;
+    font-size: 13px;
   }
 }
