--- a/src/pages/Projects/Projects.css
+++ b/src/pages/Projects/Projects.css
@@ -1,9 +1,9 @@
-.outer {
+/* .outer {
   position: relative;
   z-index: 0;
   max-width: 100vw;
   margin: 2vw;
-  /* background-color: #19181a; */
+  /* background-color: #19181a; 
   color: white;
   display: grid;
   grid-template-columns: 25vw 25vw 25vw;
@@ -15,7 +15,7 @@
 .container {
   display: flex;
   flex-direction: column;
-  /* background-color: #19181a; */
+  /* background-color: #19181a; 
   color: white;
   align-items: center;
   min-height: 100vh;
@@ -24,4 +24,86 @@
 .outer-text {
   font-size: 3vw;
   font-weight: 400;
+} */
+
+.container {
+  display: flex;
+  flex-direction: column;
+  /* background-color: #19181a;*/
+  color: white;
+  align-items: center;
+  min-height: 100vh;
+}
+
+@media (min-width: 1200px) {
+  .outer-text {
+    font-size: 60px;
+    font-weight: 400;
+  }
+  .outer {
+    display: grid;
+    grid-template-columns: 25vw 25vw 25vw;
+    gap: 2.5vw;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+@media (min-width: 992px) and (max-width: 1200px) {
+  .outer-text {
+    color: pink;
+    font-size: 60px;
+    font-weight: 400;
+  }
+  .outer {
+    display: grid;
+    grid-template-columns: 25vw 25vw 25vw;
+    gap: 2.5vw;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 992px) {
+  .outer-text {
+    font-size: 60px;
+    font-weight: 400;
+  }
+  .outer {
+    display: grid;
+    grid-template-columns: 30vw 30vw;
+    gap: 2.5vw;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+@media (min-width: 600px) and (max-width: 768px) {
+  .outer-text {
+    color: pink;
+    font-size: 60px;
+    font-weight: 400;
+  }
+  .outer {
+    display: grid;
+    grid-template-columns: 30vw 30vw;
+    gap: 2.5vw;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+@media (max-width: 600px) {
+  .outer-text {
+    margin-left: 20px;
+    font-size: 29px;
+    font-weight: 400;
+  }
+  .outer {
+    display: grid;
+    /* grid-template-columns: 25vw; */
+    gap: 2.5vw;
+    justify-content: center;
+    align-items: center;
+  }
 }
