--- a/src/pages/Contact/Contact.css
+++ b/src/pages/Contact/Contact.css
@@ -1,24 +1,27 @@
-.contact {
+/* .contact {
   max-width: 100vw;
   height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  /* background-color: #19181a; */
+  /* background-color: #19181a; 
 }
-
+*/
+/*
 .wrap {
   display: flex;
   gap: 2rem;
   justify-content: center;
 }
-
+*/
+/*
 .contact-text {
   display: inline-block;
   margin: 0 0 5rem 0;
 }
-
+*/
+/*
 .contact-text h1 {
   font-size: 3vw;
   font-weight: 400;
@@ -29,6 +32,226 @@
   letter-spacing: 0.4vw;
   color: white;
   animation: typing 3s steps(40, end), blink-caret 0.75s step-end infinite;
+}*/
+/*
+@keyframes typing {
+  from {
+    width: 0;
+  }
+  to {
+    width: 100%;
+  }
+}
+
+@keyframes blink-caret {
+  from,
+  to {
+    border-color: transparent;
+  }
+  50% {
+    border-color: white;
+  }
+}
+*/
+/*
+.wrap {
+  display: flex;
+  align-items: center;
+}
+*/
+/*
+.contact-center {
+  width: 75vw;
+  height: 70vh;
+  background-image: url('../../assets/keyboard.jpg');
+  filter: blur(6px);
+  position: relative;
+  z-index: 0;
+}
+*/
+/*
+form {
+  position: absolute;
+  width: 50vw;
+  height: 50vh;
+}
+*/
+/*
+.input-group {
+  margin-bottom: 3vh;
+  position: relative;
+}
+*/
+/*
+input,
+textarea {
+  width: 100%;
+  height: 5vh;
+  outline: 0;
+  border: none;
+  border-bottom: 1px solid white;
+  color: white;
+  background: transparent;
+  font-size: 1.2rem;
+  margin-bottom: 1rem;
+}
+*/
+/*
+textarea {
+  height: 13vh;
+  left: 0;
+  top: 0;
+}
+*/
+/*
+label {
+  font-size: 1.3vw;
+  font-weight: 600;
+  color: white;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  padding: 10px;
+  column-rule: white;
+  cursor: text;
+  transition: 0.2s;
+}
+*/
+/*
+button {
+  font-size: 1.5vw;
+  font-weight: 600;
+  padding: 10px 0;
+  color: white;
+  outline: none;
+  background: transparent;
+  border: 1px solid white;
+  width: 100%;
+  cursor: pointer;
+}
+*/
+/*
+input:focus ~ label,
+input:valid ~ label,
+textarea:focus ~ label,
+textarea:valid ~ label {
+  top: -35px;
+  font-size: 0.9rem;
+}*/
+/*
+.row {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+*/
+/*
+.row .input-group {
+  width: 48%;
+}
+*/
+/*
+.bottom {
+  display: flex;
+  gap: 5rem;
+  color: white;
+}
+*/
+/*
+.bottom1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1vw;
+} */
+
+.contact {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  /* background-color: #19181a; */
+}
+
+.contact-text h1 {
+  font-weight: 400;
+  overflow: hidden;
+  border-right: 1px solid black;
+  white-space: nowrap;
+  margin: 0 auto;
+  animation: typing 3s steps(40, end), blink-caret 0.75s step-end infinite;
+}
+
+.wrap {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.contact-center {
+  background-image: url('../../assets/keyboard.jpg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  filter: blur(6px);
+  position: relative;
+  z-index: 0;
+}
+
+form {
+  position: absolute;
+}
+
+.input-group {
+  position: relative;
+}
+
+input,
+textarea {
+  outline: 0;
+  border: none;
+  border-bottom: 1px solid white;
+  color: white;
+  background: transparent;
+}
+
+textarea {
+  left: 0;
+  top: 0;
+}
+
+label {
+  font-weight: 600;
+  color: white;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  column-rule: white;
+  cursor: text;
+  transition: 0.2s;
+}
+
+button {
+  font-weight: 600;
+  color: white;
+  outline: none;
+  background: transparent;
+  border: 1px solid white;
+  width: 100%;
+  cursor: pointer;
+}
+
+.bottom {
+  display: flex;
+  color: white;
+}
+
+.bottom1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 @keyframes typing {
@@ -49,103 +272,300 @@
     border-color: white;
   }
 }
-.wrap {
-  display: flex;
-  align-items: center;
+
+@media (min-width: 1200px) {
+  .contact {
+    max-width: 100vw;
+    height: 100vh;
+  }
+  .contact-text {
+    display: inline-block;
+    margin: 0 0 80px 0;
+  }
+  .contact-text h1 {
+    font-size: 55px;
+    letter-spacing: 6.4px;
+    color: white;
+  }
+  .contact-center {
+    width: 1000px;
+    height: 500px;
+  }
+  form {
+    width: 900px;
+    height: 340px;
+  }
+  .input-group {
+    margin-bottom: 30px;
+  }
+  .row {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .row .input-group {
+    width: 48%;
+  }
+  input,
+  textarea {
+    width: 100%;
+    height: 38px;
+    font-size: 19px;
+    margin-bottom: 16px;
+  }
+  label {
+    font-size: 20px;
+    padding: 10px;
+  }
+  button {
+    font-size: 23px;
+    padding: 10px 0;
+  }
+  input:focus ~ label,
+  input:valid ~ label,
+  textarea:focus ~ label,
+  textarea:valid ~ label {
+    top: -35px;
+    font-size: 15px;
+  }
+  .bottom {
+    gap: 80px;
+  }
+  .bottom1 {
+    gap: 20px;
+  }
 }
 
-.contact-center {
-  width: 75vw;
-  height: 70vh;
-  background-image: url('../../assets/keyboard.jpg');
-  filter: blur(6px);
-  position: relative;
-  z-index: 0;
+@media (min-width: 992px) and (max-width: 1200px) {
+  .contact {
+    max-width: 100vw;
+    height: 100vh;
+  }
+  .contact-text {
+    display: inline-block;
+    margin: 0 0 80px 0;
+  }
+  .contact-text h1 {
+    color: pink;
+    font-size: 55px;
+    letter-spacing: 6.4px;
+    /* color: white; */
+  }
+  .contact-center {
+    width: 800px;
+    height: 500px;
+  }
+  form {
+    width: 700px;
+    height: 340px;
+  }
+  .input-group {
+    margin-bottom: 30px;
+  }
+  .row {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .row .input-group {
+    width: 48%;
+  }
+  input,
+  textarea {
+    width: 100%;
+    height: 38px;
+    font-size: 19px;
+    margin-bottom: 16px;
+  }
+  label {
+    font-size: 20px;
+    padding: 10px;
+  }
+  button {
+    font-size: 23px;
+    padding: 10px 0;
+  }
+  input:focus ~ label,
+  input:valid ~ label,
+  textarea:focus ~ label,
+  textarea:valid ~ label {
+    top: -35px;
+    font-size: 15px;
+  }
+  .bottom {
+    gap: 80px;
+  }
+  .bottom1 {
+    gap: 20px;
+  }
 }
 
-form {
-  position: absolute;
-  width: 50vw;
-  height: 50vh;
+@media (min-width: 768px) and (max-width: 992px) {
+  .contact {
+    max-width: 100vw;
+    height: 100vh;
+  }
+  .contact-text {
+    display: inline-block;
+    margin: 0 0 80px 0;
+  }
+  .contact-text h1 {
+    /* color: pink; */
+    margin-left: 20px;
+    font-size: 40px;
+    letter-spacing: 6.4px;
+    color: white;
+  }
+  .contact-center {
+    width: 600px;
+    height: 500px;
+  }
+  form {
+    width: 500px;
+    height: 340px;
+  }
+  .input-group {
+    margin-bottom: 30px;
+  }
+  input,
+  textarea {
+    width: 100%;
+    height: 38px;
+    font-size: 19px;
+    margin-bottom: 16px;
+  }
+  label {
+    font-size: 20px;
+    padding: 10px;
+  }
+  button {
+    font-size: 23px;
+    padding: 10px 0;
+  }
+  input:focus ~ label,
+  input:valid ~ label,
+  textarea:focus ~ label,
+  textarea:valid ~ label {
+    top: -35px;
+    font-size: 15px;
+  }
+  .bottom {
+    gap: 80px;
+  }
+  .bottom1 {
+    gap: 20px;
+  }
 }
 
-.input-group {
-  margin-bottom: 3vh;
-  position: relative;
+@media (min-width: 600px) and (max-width: 768px) {
+  .contact {
+    max-width: 100vw;
+    height: 100vh;
+  }
+  .contact-text {
+    display: inline-block;
+    margin: 0 0 80px 0;
+  }
+  .contact-text h1 {
+    color: pink;
+    margin-left: 30px;
+    font-size: 28px;
+    letter-spacing: 6.4px;
+    /* color: white; */
+  }
+  .contact-center {
+    width: 400px;
+    height: 500px;
+  }
+  form {
+    width: 300px;
+    height: 340px;
+  }
+  .input-group {
+    margin-bottom: 30px;
+  }
+  input,
+  textarea {
+    width: 100%;
+    height: 38px;
+    font-size: 19px;
+    margin-bottom: 16px;
+  }
+  label {
+    font-size: 20px;
+    padding: 10px;
+  }
+  button {
+    font-size: 23px;
+    padding: 10px 0;
+  }
+  input:focus ~ label,
+  input:valid ~ label,
+  textarea:focus ~ label,
+  textarea:valid ~ label {
+    top: -35px;
+    font-size: 15px;
+  }
+  .bottom {
+    gap: 30px;
+  }
 }
 
-input,
-textarea {
-  width: 100%;
-  height: 5vh;
-  outline: 0;
-  border: none;
-  border-bottom: 1px solid white;
-  color: white;
-  background: transparent;
-  font-size: 1.2rem;
-  margin-bottom: 1rem;
-}
-
-textarea {
-  height: 13vh;
-  left: 0;
-  top: 0;
-}
-
-label {
-  font-size: 1.3vw;
-  font-weight: 600;
-  color: white;
-  height: 100%;
-  position: absolute;
-  left: 0;
-  top: 0;
-  padding: 10px;
-  column-rule: white;
-  cursor: text;
-  transition: 0.2s;
-}
-
-button {
-  font-size: 1.5vw;
-  font-weight: 600;
-  padding: 10px 0;
-  color: white;
-  outline: none;
-  background: transparent;
-  border: 1px solid white;
-  width: 100%;
-  cursor: pointer;
-}
-
-input:focus ~ label,
-input:valid ~ label,
-textarea:focus ~ label,
-textarea:valid ~ label {
-  top: -35px;
-  font-size: 0.9rem;
-}
-
-.row {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.row .input-group {
-  width: 48%;
-}
-
-.bottom {
-  display: flex;
-  gap: 5rem;
-  color: white;
-}
-
-.bottom1 {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 1vw;
+@media (max-width: 600px) {
+  .contact {
+    max-width: 100vw;
+    height: 100vh;
+  }
+  .contact-text {
+    display: inline-block;
+    margin: 0 0 80px 0;
+  }
+  .contact-text h1 {
+    /* color: pink; */
+    margin-left: 30px;
+    font-size: 28px;
+    letter-spacing: 6.4px;
+    color: white;
+  }
+  .contact-center {
+    margin-left: 70px;
+    width: 350px;
+    height: 600px;
+  }
+  form {
+    margin-left: 70px;
+    width: 300px;
+    height: 340px;
+  }
+  .input-group {
+    margin-bottom: 30px;
+  }
+  input,
+  textarea {
+    width: 100%;
+    height: 38px;
+    font-size: 15px;
+    margin-bottom: 16px;
+  }
+  label {
+    font-size: 20px;
+    padding: 10px;
+  }
+  button {
+    font-size: 23px;
+    padding: 10px 0;
+  }
+  input:focus ~ label,
+  input:valid ~ label,
+  textarea:focus ~ label,
+  textarea:valid ~ label {
+    top: -35px;
+    font-size: 15px;
+  }
+  .bottom {
+    display: flex;
+    flex-direction: column;
+    margin-top: 25px;
+    gap: 10px;
+  }
 }
