--- a/src/pages/Contact/Contact.css
+++ b/src/pages/Contact/Contact.css
@@ -343,11 +343,11 @@ button {
   }
   .contact-text {
     display: inline-block;
-    margin: 0 0 50px 0;
+    margin: 20px 0 50px 0;
   }
   .contact-text h1 {
-    margin-left: 30px;
-    font-size: 15px;
+    margin-left: 50px;
+    font-size: 12px;
     letter-spacing: 6.4px;
   }
   .contact-center {
