--- a/src/pages/Contact/Contact.css
+++ b/src/pages/Contact/Contact.css
@@ -343,10 +343,10 @@ button {
   }
   .contact-text {
     display: inline-block;
-    margin: 20px 0 50px 0;
+    margin: 0 0 50px 0;
   }
   .contact-text h1 {
-    margin-left: 50px;
+    margin-left: 30px;
     font-size: 12px;
     letter-spacing: 6.4px;
   }
