--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,8 @@ body {
   padding: 0;
   max-width: 100vw;
   font-family: 'Playfair Display', serif;
-  background-color: #19181a;
+  /* background-color: #19181a; */
+  background-color: #000000;
 }
 
 .App {
