--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,90 +1,97 @@
-.navbar {
-  height: 100vh;
-  background-color: rgba(255, 255, 255, 0.2);
-  position: fixed;
-  z-index: 1;
-}
+@import url('https://fonts.googleapis.com/css2?family=Archivo+Narrow:ital,wght@0,400..700;1,400..700&display=swap');
 
-.navbar ul {
-  list-style: none;
-  display: flex;
-  flex-direction: column;
-  position: absolute;
-}
-
-.nav-li {
-  text-decoration: none;
-  font-weight: 800;
+.navbar{
+  max-width: 100vw;
+  height: 3.2rem;
+  padding: 0 5rem 0;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  background-color: rgba(255,255,255,0.2);
+  /* backdrop-filter: blur(15px); */
   color: white;
-  mix-blend-mode: overlay;
+  border-bottom: 1px solid white;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: sticky;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  font-family: "Archivo Narrow", sans-serif;
 }
 
-@media (min-width: 1200px) {
-  .navbar {
-    width: 50px;
-    padding-top: 15%;
+.name{
+  font-size: 1.5rem;
+  font-weight: 700;
+}
+
+.navbar ul{
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  gap: 2rem;
+  list-style: none;
+}
+
+.nav-links{
+  position: relative;
+  cursor: pointer;
+  color: white;
+  text-decoration: none;
+  display: inline-block;
+  transition: width 0.4s ease, left 0.4s ease;
+}
+
+.active{
+  color: #9290C3;
+  border-bottom: 1px solid #9290C3;
+}
+
+.nav-links:hover{
+  color: #9290C3;
+  border-bottom: 1px solid #9290C3;
+  transition: all 0.4s ease;
+  width: 100%;
+}
+
+@media(min-width:576px){
+  .navbar{
+    max-width: 100%;
+    padding: 0 2rem;
   }
-  .icon {
-    font-size: 24px;
+  .name{
+    font-size: 1rem;
   }
-  .navbar ul {
-    gap: 45px;
-    right: 30%;
+  .navbar ul{
+    gap: 1.5rem;
+  }
+  .nav-links{
+    font-size: 0.8rem;
   }
 }
 
-@media (min-width: 992px) and (max-width: 1200px) {
-  .navbar {
-    width: 40px;
-    padding-top: 20%;
+@media(min-width:768px){
+  .navbar{
+    max-width: 100%;
+    padding: 0 2rem;
   }
-  .icon {
-    font-size: 22px;
+  .name{
+    font-size: 1.2rem;
   }
-  .navbar ul {
-    gap: 45px;
-    right: 30%;
-  }
-}
-
-@media (min-width: 768px) and (max-width: 992px) {
-  .navbar {
-    width: 40px;
-    padding-top: 20%;
-  }
-  .icon {
-    font-size: 20px;
-  }
-  .navbar ul {
-    gap: 45px;
-    right: 30%;
+  .nav-links{
+    font-size: 0.9rem;
   }
 }
 
-@media (min-width: 600px) and (max-width: 768px) {
-  .navbar {
-    width: 30px;
-    padding-top: 25%;
-  }
-  .icon {
-    font-size: 18px;
-  }
-  .navbar ul {
-    gap: 45px;
-    right: 25%;
-  }
+/* @media(min-width:992px){
+
 }
 
-@media (max-width: 600px) {
-  .navbar {
-    width: 30px;
-    padding-top: 45%;
-  }
-  .icon {
-    font-size: 16px;
-  }
-  .navbar ul {
-    gap: 35px;
-    right: 30%;
-  }
+@media(min-width:1200px){
+
 }
+
+@media(min-width:1400px){
+
+} */
+
