--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@ body {
   padding: 0;
   max-width: 100vw;
   font-family: 'Playfair Display', serif;
-  /* background-color: #19181a; */
+  overflow-x: hidden;
   background-color: #000000;
 }
 
