--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -6,10 +6,9 @@
   padding: 0 5rem 0;
   letter-spacing: 1px;
   text-transform: uppercase;
-  background-color: rgba(255,255,255,0.2);
-  /* backdrop-filter: blur(15px); */
+  background-color: #000000;
   color: white;
-  border-bottom: 1px solid white;
+  border-bottom: 1px solid rgba(255,255,255,0.2);
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -60,19 +59,19 @@
     padding: 0 2rem;
   }
   .name{
-    font-size: 1rem;
+    font-size: 1.2rem;
   }
   .navbar ul{
     gap: 1.5rem;
   }
   .nav-links{
-    font-size: 0.8rem;
+    font-size: 0.9rem;
   }
 }
 
 @media(min-width:768px){
   .navbar{
-    max-width: 100%;
+    max-width: 100vw;
     padding: 0 2rem;
   }
   .name{
@@ -82,16 +81,3 @@
     font-size: 0.9rem;
   }
 }
-
-/* @media(min-width:992px){
-
-}
-
-@media(min-width:1200px){
-
-}
-
-@media(min-width:1400px){
-
-} */
-
