--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,19 @@
-@import url('https://fonts.googleapis.com/css2?family=Karla:wght@500&family=Playfair+Display:wght@400;500;600&family=Titillium+Web:ital,wght@0,600;0,700;1,400&display=swap');
-
+/* @import url('https://fonts.googleapis.com/css2?family=Karla:wght@500&family=Playfair+Display:wght@400;500;600&family=Titillium+Web:ital,wght@0,600;0,700;1,400&display=swap'); */
 /* font-family: 'Karla', sans-serif; */
 /* font-family: 'Playfair Display', serif; */
 /* font-family: 'Titillium Web', sans-serif; */
+/*-- font-family: 'Playfair Display', serif; */
+
+@import url('https://fonts.googleapis.com/css2?family=Archivo+Narrow:ital,wght@0,400..700;1,400..700&display=swap');
 
 body {
   margin: 0;
   padding: 0;
   max-width: 100vw;
-  font-family: 'Playfair Display', serif;
   overflow-x: hidden;
   background-color: #000000;
+  font-family: "Archivo Narrow", sans-serif;
+
 }
 
 .App {
