--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Archivo+Narrow:ital,wght@0,400..700;1,400..700&display=swap');
-
 .navbar{
   max-width: 100vw;
   height: 3.2rem;
@@ -16,7 +14,6 @@
   z-index: 1;
   left: 0;
   top: 0;
-  font-family: "Archivo Narrow", sans-serif;
 }
 
 .name{
@@ -35,22 +32,39 @@
 .nav-links{
   position: relative;
   cursor: pointer;
-  color: white;
+  /* color: white; */
+  color: #B5A896;
   text-decoration: none;
   display: inline-block;
   transition: width 0.4s ease, left 0.4s ease;
 }
 
 .active{
-  color: #9290C3;
+  color: #907659;
   border-bottom: 1px solid #9290C3;
 }
 
 .nav-links:hover{
-  color: #9290C3;
-  border-bottom: 1px solid #9290C3;
+  color: #907659;
+  border-bottom: 1px solid #907659;
   transition: all 0.4s ease;
   width: 100%;
+}
+
+@media(max-width:576px){
+  .navbar{
+    max-width: 100%;
+    padding: 0 1rem;
+  }
+  .name{
+    font-size: 1rem;
+  }
+  .navbar ul{
+    gap: 1rem;
+  }
+  .nav-links{
+    font-size: 0.8rem;
+  }
 }
 
 @media(min-width:576px){
@@ -62,10 +76,10 @@
     font-size: 1.2rem;
   }
   .navbar ul{
-    gap: 1.5rem;
+    gap: 1.1rem;
   }
   .nav-links{
-    font-size: 0.9rem;
+    font-size: 0.8rem;
   }
 }
 
