--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -127,8 +127,10 @@
     height: 30rem;
   }
   .home-intro{
-    width: 100vw;
-    height: 100vh;
+    width: 42rem;
+    height: 20rem;
+    top: 10rem;
+    left: 0;
     left: 1rem;
     /* background-color: rgba(0,0,0,0.5); */
   }
