--- a/src/pages/Projects/Projects.css
+++ b/src/pages/Projects/Projects.css
@@ -1,76 +1,92 @@
-.container {
+.projects{
+  width: 100vw;
+  /* height: 100vh; */
+  color: white;
+  margin: 0 0 2rem;
+  padding: 0;
+  position: absolute;
+  top: 97vh;
+}
+
+.project-title{
+  width: 100vw;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-transform: uppercase;
+  margin: 2.5rem 0 0;
+}
+
+.project-title h1{
+  position: absolute;
+  color: rgba(255,255,255,0.1);
+  font-size: 4rem;
+  font-weight: 700;
+  margin: 0;
+}
+
+.project-title h3{
+  position: absolute;
+  font-size: 2rem;
+  font-weight: bolder;
+  color: #BEA887;
+  z-index: 1;
+  letter-spacing: 0.5rem;
+  margin: 0.4rem 0 0 0.1rem;
+}
+
+.project-cards-div{
+  width: 100vw;
+  position: absolute;
+  top: 6rem;
   display: flex;
   flex-direction: column;
-  color: white;
+  gap: 4rem;
   align-items: center;
-  min-height: 100vh;
+  justify-content: center;
 }
 
-@media (min-width: 1200px) {
-  .outer-text {
-    font-size: 60px;
-    font-weight: 400;
-  }
-  .outer {
-    display: grid;
-    grid-template-columns: 400px 400px 400px;
-    gap: 25px;
-    justify-content: center;
-    align-items: center;
-  }
+.frameworks{
+  display: flex;
+  gap: 2rem;
 }
 
-@media (min-width: 992px) and (max-width: 1200px) {
-  .outer-text {
-    font-size: 60px;
-    font-weight: 400;
-  }
-  .outer {
-    display: grid;
-    grid-template-columns: 25vw 25vw 25vw;
-    gap: 2.5vw;
-    justify-content: center;
-    align-items: center;
-  }
+.fw{
+  border: none;
+  font-weight: 400;
+  height: 2rem;
+  display: flex;
+  align-items: center;
+  /* border-bottom: 0; */
+  text-decoration: none;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  color: white;
+  font-size: 1.2rem;
+  transition: all 0.3s ease;
 }
 
-@media (min-width: 768px) and (max-width: 992px) {
-  .outer-text {
-    font-size: 60px;
-    font-weight: 400;
-  }
-  .outer {
-    display: grid;
-    grid-template-columns: 360px 360px;
-    gap: 28px;
-    justify-content: center;
-    align-items: center;
-  }
+.fw:hover{
+  color: #BEA887;
 }
 
-@media (min-width: 600px) and (max-width: 768px) {
-  .outer-text {
-    font-size: 60px;
-    font-weight: 400;
-  }
-  .outer {
-    display: grid;
-    gap: 40px;
-    justify-content: center;
-    align-items: center;
-  }
+.frameworks.active{
+  border-bottom: 1px solid #BEA887;
 }
 
-@media (max-width: 600px) {
-  .outer-text {
-    margin-left: 20px;
-    font-size: 29px;
-    font-weight: 400;
-  }
-  .outer {
-    display: grid;
-    gap: 40px;
-    justify-content: center;
-    align-items: center;
-  }
+.project-cards{
+  margin: 0 0 5rem;
+}
+
+.project-cards-inner{
+  width: 100vw;
+  color: white;
+  display: grid;
+  grid-template-columns: 20rem 20rem 20rem 20rem;
+  /* grid-template-columns: 1fr 1fr 1fr 1fr; */
+  column-gap: 2rem;
+  row-gap: 2rem;
+  justify-content: center;
+  align-items: center;
 }
